// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NavItem /> > render a Active item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
        data-current="true"
      >
        <button
          aria-current="true"
          class="_nav-item_eb2dec"
        >
          Sessions
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavItem /> > render a ActiveDisabled item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
        data-current="true"
      >
        <button
          aria-current="true"
          class="_nav-item_eb2dec"
          disabled=""
        >
          Sessions
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavItem /> > render a ActiveLink item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
        data-current="true"
      >
        <a
          aria-current="page"
          class="_nav-item_eb2dec"
          href="https://example.org"
        >
          Sessions
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavItem /> > render a Disabled item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
      >
        <button
          class="_nav-item_eb2dec"
          disabled=""
        >
          Sessions
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavItem /> > render a Link item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
      >
        <a
          class="_nav-item_eb2dec"
          href="https://example.org"
        >
          Sessions
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavItem /> > render a default item 1`] = `
<div>
  <nav
    aria-label="Testing"
    class="_nav-bar_eb2dec"
    role="navigation"
  >
    <ul
      class="_nav-bar-items_eb2dec"
    >
      <li
        class="_nav-tab_eb2dec"
      >
        <button
          class="_nav-item_eb2dec"
        >
          Sessions
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
